--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <section class="dream-big">
     <div class="half-width">
-        <img src="IMG-20201122-WA0016-removebg-preview.png" alt="">
+        <img class=" pho" src="IMG-20201122-WA0016-removebg-preview.png" alt="">
     </div>
     <div  class="half-width">
         <h1>Bream big</h1>
