--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <section class="banner-top">
+    <section class="banner-top web ">
+
         <div  class=" half-width">
             <h1>Welcome To</h1>
-            <h1 class="orange-colour">Redowanul Bury Chowdhuray!</h1>
+            <h2 class="orange-colour">Redowanul Bury Chowdhuray!</h2>
            <h3 > web developer beginner </h3>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam debitis excepturi at accusantium necessitatibus eius ad nisi enim sequi molestias quidem sit consectetur, reprehenderit eaque alias natus eum. Ipsum illum modi, sequi possimus dolore architecto reprehenderit necessitatibus optio ipsa quaerat hic, sunt fugiat qui quibusdam beatae obcaecati nihil voluptas numquam.</p>
+           <p> “There is nothing permanent except change.” </p>
            <a class="link" target="_blank" href="https://www.linkedin.com/in/re-dow-an-hossain-53231022a/">HIRE ME</a>
         </div>
- <div class="half-width">
-  <img src="ba.png" alt="">
+ <div class="new">
+     <img src="panjabi.png" alt="">
  </div>
 </section>
 
@@ -29,12 +30,12 @@
 
 <section class="dream-big">
     <div class="half-width">
-        <img class=" pho" src="IMG-20201122-WA0016-removebg-preview.png" alt="">
+        <img class=" pho" src="IMG-20210325-WA0012-removebg-preview.png" alt="">
     </div>
     <div  class="half-width">
         <h1>Bream big</h1>
-        <h2> Become a web developer</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat aspernatur ullam itaque id ipsum possimus delectus distinctio nisi. Quo nobis obcaecati excepturi quam maxime. Voluptatum cumque aut saepe maiores earum.</p>
+        <h2> <p> sopno to onk gula ace kont thake suru korbo. ekhon amr je boaish ai somoay doker akta sexy GF. pucur mal kamaite hobo ar at korte cacci  akjo professional web developer maddome. tar theko boro shopno hoilo python shika kintu haler html niye math nosto . </p>
+            <h4>Inshallha </h4> 
         <a class="link" target="_blank" href="https://www.linkedin.com/in/re-dow-an-hossain-53231022a/"> dowanlod resume</a>
     </div>
 </section>
@@ -42,11 +43,23 @@
 
 
 
+<section class=" pic" >
+   
+    <h2 class="cv"> ABOUT CV </h2>
+     <div class="next ">
+    <div id="pro" class=" last"  > <h2>Introduction to my self </h2>
+        <h3> 2020- Present Continue </h3>
+        <p>this is redowanul,I am web developer.I have 3years experience on html,CSS,javascript,C++ and other progamming language. some many project i work.this is one of them    </p>
+    </div>
+    <div id="baby" class="last ">
+        <h3> Qualification</h3>
+         <h3>I am a student of progamming Hero web developer </h3> <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos voluptas optio numquam ipsum quis cumque nulla provident. Necessitatibus quasi perspiciatis exercitationem illo obcaecati placeat neque, dolore pariatur, blanditiis, quae sit?  </p>
+    </div>
+    </div>
+</section>
 
 
-
-
-
+<footer class="pot"><p> redowanul bury chowdhuray 2022,</p></footer>
 
 
 
