--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img class=" pho" src="IMG-20210325-WA0012-removebg-preview.png" alt="">
     </div>
     <div  class="half-width">
-        <h1>Bream big</h1>
+        <h1>Dream big</h1>
         <h2> <p> sopno to onk gula ace kont thake suru korbo. ekhon amr je boaish ai somoay doker akta sexy GF. pucur mal kamaite hobo ar at korte cacci  akjo professional web developer maddome. tar theko boro shopno hoilo python shika kintu haler html niye math nosto . </p>
             <h4>Inshallha </h4> 
         <a class="link" target="_blank" href="https://www.linkedin.com/in/re-dow-an-hossain-53231022a/"> dowanlod resume</a>
